# nginx-nacos-upstream

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build.sh  third_part.LICENSE
auto/: make  modules  sources
cobjs/: ngx_auto_config.h  ngx_auto_headers.h  ngx_modules.c
conf/: my.conf
modules/auxiliary/: config  ngx_auxiliary_module.c  ngx_auxiliary_module.h
modules/nacos/: any.pb-c.h  backup.pb.c  backup.pb.h  backup.proto  config  nacos_grpc_service.pb-c.c  nacos_grpc_service.pb-c.h  nacos_grpc_service.pb.c  nacos_grpc_service.pb.h  ngx_http_nacos.h  ngx_http_nacos_config_module.c  ngx_http_nacos_module.c  ngx_http_nacos_upstream_module.c  ngx_nacos.h  ngx_nacos_aux.c  ngx_nacos_aux.h  ngx_nacos_data.c  ngx_nacos_data.h  ngx_nacos_grpc.c  ngx_nacos_grpc.h  ngx_nacos_http_parse.c  ngx_nacos_http_parse.h  ngx_nacos_module.c  ngx_nacos_udp.c  ngx_nacos_udp.h
modules/nacos/pb/: pb.h
modules/nacos/yaij/: yajl.c  yajl_parser.c  yajl_tree.c
modules/nacos/yaij/api/: yajl_common.h  yajl_gen.h  yajl_parse.h  yajl_tree.h  yajl_version.h
patch/: nginx.patch
src/http/: ngx_http_upstream.c
src/os/unix/: ngx_process_cycle.c  ngx_process_cycle.h
